fix find_teacher layout on small devices

--- a/web/css/common.css
+++ b/web/css/common.css
@@ -162,3 +162,7 @@ span.oi {
 div.modal-header {
     cursor: move;
 }
+
+button.btn {
+    white-space: normal;
+}
